--- a/c02/threejs_ej01/cube2.html
+++ b/c02/threejs_ej01/cube2.html
@@ -9,7 +9,7 @@
 	</style>
 </head>
 <body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+<script src="three.min.js"></script>
 <script>
 const scene = new THREE.Scene();  //Metodo para crear una nueva escena 
 
