--- a/c03/ilumina/iluminacion.html
+++ b/c03/ilumina/iluminacion.html
@@ -1,176 +1,13 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<title>Iluminacion</title>
-	<style>
-		body {
-			margin: 0;
-			padding: 0;
-			font-size: 0;
-		}
-
-		canvas {
-			width: 100%;
-			height: 100%;
-		}
-	</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-
 <body>
-
-	<script src="three.min.js"></script>
-	<script>
-		// Crear una escena
-		const scene = new THREE.Scene();
-
-		// Crear una cámara
-		const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-		camera.position.z = 30;
-
-		// Crear un renderizador
-		const renderer = new THREE.WebGLRenderer();
-		renderer.setSize(window.innerWidth, window.innerHeight);
-		document.body.appendChild(renderer.domElement);
-
-		/* Crear tres objetos
-		const geometry = new THREE.BoxGeometry();
-		const geometry1 = new THREE.SphereGeometry(1, 32, 32);
-		const geometry2 = new THREE.ConeGeometry();
-		
-		const material = new THREE.MeshNormalMaterial({ color: 0x00ff0 });
-		const cube = new THREE.Mesh(geometry, material);
-		const sphere = new THREE.Mesh(geometry1, material);
-		const cone = new THREE.Mesh(geometry2, material);*/
-
-	
-
-		const points = [];
-		for (let i = 0; i < 5; i++) {
-			points.push(new THREE.Vector2(Math.sin(i * 0.15) * 10 + 5, (i - 5) * 2));
-		}
-		const geometry1 = new THREE.LatheGeometry(points);
-		const material1 = new THREE.MeshLambertMaterial({ color: 0xdf5639 });
-		const lathe = new THREE.Mesh(geometry1, material1);
-
-		lathe.scale.set(1.2, 1.2, 1.2)
-		lathe.position.y = 3
-
-		// Definir una curva de Catmull-Rom utilizando una serie de puntos en 3D
-		const curve = new THREE.CatmullRomCurve3([
-			new THREE.Vector3(4, 4, 0),
-			new THREE.Vector3(3.93, 3.95, 0),
-			new THREE.Vector3(3.83, 3.95, 0),
-			new THREE.Vector3(3.95, 3.95, 0),
-			new THREE.Vector3(0, 0, 0),
-			new THREE.Vector3(3.8, -3.9, 0),
-			new THREE.Vector3(7.8, -2.5, 0),
-		]);
-
-		// Obtener una serie de 50 puntos equidistantes a lo largo de la curva de Catmull-Rom
-		const points1 = curve.getPoints(50);
-
-		// Crear una geometría de tubo a lo largo de la curva de Catmull-Rom
-		const geometry = new THREE.TubeGeometry(new THREE.CatmullRomCurve3(points1), 100, 0.8, 20, false);
-
-		// Crear un material de malla Phong con un color verde
-		const material = new THREE.MeshNormalMaterial({ color: 0x00ff00 });
-
-		// Crear un objeto 3D usando la geometría del tubo y el material Phong
-		const tube = new THREE.Mesh(geometry, material);
-
-		//Agregar el objeto tubo a la escena
-
-		tube.scale.set(0.8, 0.8, 0.8)
-		tube.position.x = -14;
-		tube.position.y = -3;
-
-		const geometry2 = new THREE.CircleGeometry(2.3, 15, Math.PI, Math.PI);
-		const material2 = new THREE.MeshBasicMaterial({ color: 0xffffff });
-		const circle = new THREE.Mesh(geometry2, material2);
-
-
-		circle.position.y = 0;
-		circle.position.z = 12.3;
-		circle.position.x = -2.5;
-
-		const circle2 = new THREE.Mesh(geometry2, material2);
-
-		circle2.position.y = 0;
-		circle2.position.z = 12.3;
-		circle2.position.x = 2.5;
-
-		const geometry3 = new THREE.CircleGeometry(1, 15)
-		const material3 = new THREE.MeshLambertMaterial({color: 0xffff00})
-	
-
-		// Definir una curva de Catmull-Rom utilizando una serie de puntos en 3D
-		const curve1 = new THREE.CatmullRomCurve3([
-			new THREE.Vector3(0, 1, 0),
-			new THREE.Vector3(-4, 4, 0),
-			new THREE.Vector3(-1, 4, 0),
-			new THREE.Vector3(1, 4, 0),
-			new THREE.Vector3(4, 4, 0),
-			new THREE.Vector3(-0.3, 1.1, 0)]
-		);
-
-		// Obtener una serie de 50 puntos equidistantes a lo largo de la curva de Catmull-Rom
-		const points2 = curve1.getPoints(50);
-
-		// Crear una geometría de tubo a lo largo de la curva de Catmull-Rom
-		const geometry_tube2 = new THREE.TubeGeometry(new THREE.CatmullRomCurve3(points2), 100, 0.4, 20, false);
-
-		// Crear un material de malla Phong con un color verde
-		const material_tube2 = new THREE.MeshNormalMaterial({ color: 0x00ff00 });
-
-		// Crear un objeto 3D usando la geometría del tubo y el material Phong
-		const tube2 = new THREE.Mesh(geometry_tube2, material_tube2);
-		
-		tube2.position.z= 12;
-		tube2.position.y= -6;
-
-		tube2.scale.set(0.5,0.5,0.5)
-
-		const cuphead = new THREE.Mesh();
-		cuphead.add(lathe, tube, circle, circle2, tube2)
-		scene.add(cuphead);
-
-		function makeLights() {
-			// we're using globals for the lights, for the GUI
-		
-			light0 = new THREE.AmbientLight( 0x202020 ); // 10%
-			scene.add(light0);
-		
-			light1 = new THREE.PointLight( 0xffffff, 0.5 ); // 50%
-			light1.position.set( -12, 15, 10 );
-			scene.add(light1);
-		
-			light2 = new THREE.DirectionalLight( 0xffffff, 0.3 );
-			light2.position.set( 0, 100, 10 );
-			scene.add(light2);
-		}
-		// Renderizar la escena
-		function animate() {
-			requestAnimationFrame(animate);
-
-			/*/ Rotar los objetos para apreciar el culling
-			cube.rotation.x += 0.01;
-			cube.rotation.y += 0.01;
-			sphere.rotation.x += 0.01;
-			sphere.rotation.y += 0.01;
-			cone.rotation.x += 0.01;
-			cone.rotation.y += 0.01;*/
-
-			/*cuphead.rotation.x += 0.01;
-			cuphead.rotation.y += 0.01;*/
-			controls.update();
-			renderer.render(scene, camera);
-		}
-		makeLights();
-		animate();
-
-	</script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cs.wellesley.edu/~cs307/threejs/libs/OrbitControls-r95.js"></script>
+    <script src="script.js"></script>
 </body>
-
 </html>
